Perbahan : Bahan Jadi menjadi Produksi

--- a/SupplyChainManagement_S1/UI/Manufaktur/Frm_Dashboard.resx
+++ b/SupplyChainManagement_S1/UI/Manufaktur/Frm_Dashboard.resx
@@ -153,7 +153,7 @@
         z69lJ0rYAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="MTile_BarangJadi.TileImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="MTile_Produksi.TileImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAN
         1wAADdcBQiibeAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAG2SURBVGhD7ZZN
